fixed misalignment of image in image-in-device comp

--- a/src/styles/6-pages/landing/components/display-projects.sass
+++ b/src/styles/6-pages/landing/components/display-projects.sass
@@ -6,8 +6,8 @@
     overflow: visible
     display: flex
     flex-direction: row
-    height: 280px
-    margin-top: 100px
+    height: 380px
+    margin-top: 50px
     justify-content: center
     align-items: center
 
@@ -17,12 +17,10 @@
   transform: scale(1.4) !important
   @media only screen and (max-width: 900px)
     transform: scale(2) !important
-    position: absolute
 .desktop-image-in-device
   transform: scale(1.4) !important
   @media only screen and (max-width: 900px)
     transform: scale(2) !important
-    position: absolute
 
 .mobile-image-in-device-display-none
   @media only screen and (max-width: 900px)
